# LightMenu

./: .gitignore  README.md  pyproject.toml
src/lightmenu/: __init__.py  lightmenu.py
